Estilos registrar autor

--- a/base/public/css/enviar_solicitud_libreria.css
+++ b/base/public/css/enviar_solicitud_libreria.css
@@ -138,6 +138,7 @@ main select{
     font-weight: bold;
     background: #000;
     outline: none;
+    cursor: pointer;
 }
 
 #btn_registrar:hover{
