--- a/base/public/css/carrito.css
+++ b/base/public/css/carrito.css
@@ -1,52 +1,63 @@
-h1{
-    color: #76323F;
+main{
+    text-align: center;
+}
+
+main h1{
+    color: #000;
     font-size: 30px;
     margin: 30px;
-  }
+}
   
-  main a{
+main a{
     padding: 10px;
-    border: 1px solid #76323F;
+    border: 1px solid #000;
     border-radius: 15px;
     font-size: 15px;
-    color: #76323F;
+    color: #000;
     font-weight: bold;
     background: none;
     outline: none;
     text-decoration: none;
-  }
+}
 
-  
+input{
+    width: 30%;
+    height: 30px;
+    margin: 20px;
+    padding: 5px;
+    border: 1px solid #000;
+    border-radius: 15px;
+    background: none;
+    outline: none;
+}
 
-  
-  
-  table {
+#txt_filtro{
+  margin-bottom: 30px;
+}
+
+table {
+    width: 80%;
+    margin: auto;
     border-collapse: collapse;
-    width: 100%;
-  }
+}
   
-  th, td {
-    text-align: center;
-    padding: 8px;
-  }
+th, td {
+    text-align: left;
+    padding: 15px;
+}
   
-  tr:nth-child(even){background-color: #f2f2f2}
+tr:nth-child(even){background-color: #f2f2f2}
   
-  th {
-    background-color: #76323F;
+th {
+    background-color: #f6b93b;
     color: white;
-  }
-  
-  
-  html {
-    min-height: 100%;
-    position: relative;
-  }
-  
-  body {
-    margin: 0;
-    margin-bottom: 40px;
-  }
+}
+
+
+
+
+
+
   
   .overlay{
   background: rgba(0, 0, 0,0.1);
@@ -92,19 +103,4 @@ h1{
       text-decoration: none;
       cursor: pointer;
     }
-  
-  
-  main button {
-  padding: 10px;
-  border: 1px solid grey;
-  border-radius: 15px;
-  font-size: 25px;
-  color: #fff;
-  font-weight: bold;
-  background: grey;
-  outline: none; 
-  }
-  
-  
-
   
