--- a/base/public/css/listar_libros.css
+++ b/base/public/css/listar_libros.css
@@ -111,3 +111,34 @@ th {
     border:solid 1px #000;
     padding:5px 10px;
 }
+.button{
+    padding: 10px;
+    border: 2px solid #000;
+    border-radius: 15px;
+    font-size: 15px;
+    color: #000;
+    font-weight: bold;
+    margin: 15px;
+    background: none;
+    float: right;
+    outline: none;
+    text-decoration: none;
+  
+    
+    }
+
+.button:hover{
+    padding: 10px;
+    border: 2px solid #f6b93b;
+    border-radius: 15px;
+    font-size: 15px;
+    color: #f6b93b;
+    font-weight: bold;
+    margin: 15px;
+    background: none;
+    float: right;
+    outline: none;
+    text-decoration: none;
+    float: right;
+    cursor: pointer;
+]
