--- a/base/public/css/registrar-autor.css
+++ b/base/public/css/registrar-autor.css
@@ -110,3 +110,26 @@ main select{
     background: #f6b93b;
     outline: none;
 }
+
+button{
+    margin: 30px 0;
+    padding: 10px;
+    border: 2px solid #000;
+    font-size: 20px;
+    color: #fff;
+    font-weight: bold;
+    background: #000;
+    outline: none;
+    cursor: pointer;
+}
+
+button:hover{
+    margin: 30px 0;
+    padding: 10px;
+    border: 2px solid #f6b93b;
+    font-size: 20px;
+    color: #fff;
+    font-weight: bold;
+    background: #f6b93b;
+    outline: none;
+}
