--- a/base/public/css/inventario_general.css
+++ b/base/public/css/inventario_general.css
@@ -1,7 +1,12 @@
 h1{
-    color: #76323F;
-    font-size: 30px;
-    margin: 30px;
+  color: #f6b93b;
+  font-size: 30px;
+  margin: 60px;
+  font-weight: bold;
+}
+
+main{
+  text-align: center;
 }
 
 main a{
@@ -16,23 +21,42 @@ main a{
     text-decoration: none;
 }
 
+label{
+
+  margin: 70px;
+  color: #000;
+  font-size: 20px;
+}
+
+input{
+  width: 30%;
+  height: 30px;
+  margin: 20px;
+  padding: 5px;
+  border: 1px solid #000;
+  border-radius: 15px;
+  background: none;
+  outline: none;
+}
+
+
 
 table {
-    border-collapse: collapse;
-    width: 100%;
-  }
+  border-collapse: collapse;
+  width: 100%;
+}
 
-  th, td {
-    text-align: center;
-    padding: 8px;
-  }
+th, td {
+  text-align: center;
+  padding: 15px;
+}
 
-  tr:nth-child(even){background-color: #f2f2f2}
+tr:nth-child(even){background-color: #f2f2f2}
 
-  th {
-    background-color: #76323F;
-    color: white;
-  }
+th {
+  background-color: #f6b93b;
+  color: white;
+}
 
   
 html {
