--- a/base/public/css/inventraio_libreria.css
+++ b/base/public/css/inventraio_libreria.css
@@ -1,8 +1,15 @@
 h1{
-  color: #76323F;
+  color: #f6b93b;
   font-size: 30px;
-  margin: 30px;
+  margin: 60px;
+  font-weight: bold;
 }
+
+
+main{
+  text-align: center;
+}
+
 
 main a{
   padding: 10px;
@@ -16,6 +23,25 @@ main a{
   text-decoration: none;
 }
 
+label{
+
+  margin: 70px;
+  color: #000;
+  font-size: 20px;
+}
+
+input{
+  width: 30%;
+  height: 30px;
+  margin: 20px;
+  padding: 5px;
+  border: 1px solid #000;
+  border-radius: 15px;
+  background: none;
+  outline: none;
+}
+
+
 
 table {
   border-collapse: collapse;
@@ -24,16 +50,15 @@ table {
 
 th, td {
   text-align: center;
-  padding: 8px;
+  padding: 15px;
 }
 
 tr:nth-child(even){background-color: #f2f2f2}
 
 th {
-  background-color: #76323F;
+  background-color: #f6b93b;
   color: white;
 }
-
 
 html {
   min-height: 100%;
@@ -100,5 +125,6 @@ color: #fff;
 font-weight: bold;
 background: grey;
 outline: none; 
+margin: 35px;
 }
 
