--- a/base/public/css/perfil_club.css
+++ b/base/public/css/perfil_club.css
@@ -2,12 +2,14 @@
 section{
     height:400px;
     width:30%;
-    background-color:grey;
+    background-color:#fff;
     float:left;
+    text-align: center;
   }
   
   .info{
     text-align: center;
+    border:solid 1px #000;
   }
   #chatSection{
     display:none;
@@ -42,7 +44,7 @@ section{
   
   .textSender{
      float:right;
-    background-color:aqua;
+    background-color:#f6b93b;
     padding:5px 10px;
     text-align:right;
     width:347px;
@@ -94,4 +96,18 @@ section{
     display:none;
   }
   
-  
+  button{
+    background-color:#fff;
+    border:solid 1px #000;
+    color:#000;
+    padding:10px 15px;
+    margin:20px 10px;
+  }
+
+  button:hover{
+    background-color:#000;
+    border:solid 1px #000;
+    color:#fff;
+    padding:10px 15px;
+    margin:20px 10px;
+  }
