--- a/base/public/css/visualizar_perfil_libreria.css
+++ b/base/public/css/visualizar_perfil_libreria.css
@@ -11,13 +11,14 @@ h3{
     margin: 30px;
 }
 body{
-    width: 1024px;
     margin: 0 auto;
+    text-align: center;
 }
 
 #map {
     height: 350px;
-    width: 100%;
+    width: 80%;
+    margin-left: 150px;
 }
 
 /* FIN nav */
@@ -57,11 +58,13 @@ h1{
 
 #sucursales{
     margin-bottom: 100px;
+    text-align: center;
 }
 
 table {
+    width: 80%;
+    margin: auto;
     border-collapse: collapse;
-    width: 100%;
 }
   
 th, td {
@@ -80,7 +83,27 @@ th {
 
 
 
+#tbl_sucursales button{
+    padding: 10px;
+    border: 2px solid #000;
+    font-size: 15px;
+    color: #000;
+    font-weight: bold;
+    background: none;
+    outline: none; 
+    cursor: pointer;
+}
 
+#tbl_sucursales button:hover{
+    padding: 10px;
+    border: 2px solid #000;
+    font-size: 15px;
+    color: #fff;
+    font-weight: bold;
+    background: #000;
+    outline: none; 
+    cursor: pointer;
+}
 
 
 
