--- a/base/public/css/clubLectura.css
+++ b/base/public/css/clubLectura.css
@@ -71,3 +71,43 @@
 #joinedClubs_h1{
     display:none;
 }
+
+#buscarClub{
+    margin:0px 30px;
+    float:left;
+    width:300px;
+    height:30px;
+    padding:0px 10px;
+    float:left;
+}
+
+#search_club{
+    padding:0 25px 0 0;
+    width:25px;
+    border:solid 1px #000;
+    background-color:transparent;
+    float:left;
+}
+
+#search_club:hover{
+    opacity:0.7;
+    background-color:transparent;
+}
+.botonesClubes{
+    float:right;
+    margin-right:93px;
+    
+}
+.botonesClubes button{
+    padding:10px 15px;
+    background-color:#fff;
+    border:solid 1px #000;
+    color:#000;
+    margin:0 10px;
+}
+.botonesClubes button:hover{
+    padding:10px 15px;
+    background-color:#000;
+    border:solid 1px #000;
+    color:#fff;
+}
