--- a/base/public/css/perfil_club.css
+++ b/base/public/css/perfil_club.css
@@ -96,18 +96,47 @@ section{
     display:none;
   }
   
-  button{
+  
+  #info button{
     background-color:#fff;
     border:solid 1px #000;
     color:#000;
     padding:10px 15px;
-    margin:20px 10px;
+    margin:10px;
+    width:100px;
   }
 
-  button:hover{
+  #info button:hover{
     background-color:#000;
     border:solid 1px #000;
     color:#fff;
     padding:10px 15px;
-    margin:20px 10px;
+    margin:10px;
   }
+
+  #lista_eventos{
+    margin-top:50px;
+    width:100%;
+  }
+
+  #lista_eventos h1{
+    margin:20px 0;
+  }
+
+  table {
+    width: 80%;
+    margin: auto;
+    border-collapse: collapse;
+}
+  
+th, td {
+    text-align: left;
+    padding: 15px;
+}
+  
+tr:nth-child(even){background-color: #f2f2f2}
+  
+th {
+    background-color: #f6b93b;
+    color: white;
+}
